--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 
 .DS_Store
 images/vichom/.DS_Store
+css/clientes/bootstrapPlenum.min.css
+css/clientes/plenum/bootstrap.min.css
+js/clientes/plenum/bootstrapPlenum.min.js
+css/clientes/plenum/bootstrap.min.css
+css/clientes/plenum/bootstrap.min.css
+css/clientes/bootstrapPlenum.css
+css/clientes/plenum/bootstrap.min.css
